@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.service.rodina.tv"
        name="RodinaTV Service Script"
-       version="1.2.0"
+       version="1.2.1"
        provider-name="Rodina TV">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
